@@ -1,9 +1,0 @@
-* TODO py-electric-yank
-* TODO implement respective to shell-dumb-shell-regexp 
-* TODO make `py-complete-completion-at-point' command
-* TODO run shebang in ansi-term, provide resp. commands
-* TODO dispay index in speedbar
-* TODO python3 smart detect for py-execute-
-* TODO py-electric-colon: insert colon
-* TODO py-decomment
-* TODO py-output-buffer
